--- a/trunk/RelaxMusic/src/xin/music/view/MusicPlayer.mxml
+++ b/trunk/RelaxMusic/src/xin/music/view/MusicPlayer.mxml
@@ -11,8 +11,8 @@
 		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
 		<control:Control id="control"/>
 	</fx:Declarations>
-	<s:VGroup width="350"
-			  height="500">
+	<s:VGroup width="100%"
+			  height="100%">
 		<s:Group width="100%"
 				 height="30">
 			<s:Label left="20"
@@ -21,6 +21,7 @@
 					 fontSize="16"
 					 fontWeight="bold"
 					 verticalAlign="middle"
+					 lineBreak="explicit"
 					 text="{songName}"/>
 			<s:Label right="30"
 					 height="100%"
@@ -38,6 +39,7 @@
 					 height="100%"
 					 verticalAlign="middle"
 					 paddingLeft="20"
+					 lineBreak="explicit"
 					 text="{songAlbum}"/>
 			<s:Label right="30"
 					 height="100%"
