--- a/trunk/RelaxMusic/src/xin/music/view/renderer/MusicItemRenderer.mxml
+++ b/trunk/RelaxMusic/src/xin/music/view/renderer/MusicItemRenderer.mxml
@@ -19,18 +19,29 @@
 				 blurYTo="{height}"
 				 color="#DDDDDD"/>
 	</fx:Declarations>
-	<s:HGroup width="330"
-			  height="30"
-			  verticalAlign="middle">
+	<s:Group width="330"
+			 height="30">
 		<s:Image id="musicImage"
+				 left="2"
+				 top="2"
 				 width="30"
 				 height="25"
 				 fillMode="scale"
 				 smooth="true"
 				 smoothingQuality="high"/>
-		<s:Label width="245"
+		<s:Label left="34"
+				 top="0"
+				 width="200"
+				 height="100%"
+				 verticalAlign="middle"
+				 lineBreak="explicit"
 				 text="{musicName}"/>
-		<s:Label width="50"
+		<s:Label right="2"
+				 top="0"
+				 width="50"
+				 height="100%"
+				 verticalAlign="middle"
+				 lineBreak="explicit"
 				 text="{musicSize}"/>
-	</s:HGroup>
+	</s:Group>
 </renderer:MusicItemRendererClass>
